--- a/Spring MVC Spring Data JPA Thymeleaf/src/main/resources/application.properties
+++ b/Spring MVC Spring Data JPA Thymeleaf/src/main/resources/application.properties
@@ -1,5 +1,27 @@
-spring.datasource.url=jdbc:h2:mem:testdb
+server.port=8090
+#springdoc.api-docs.enabled=true
+#springdoc.swagger-ui.enabled=true
+#springdoc.swagger-ui.path=/swagger-ui.html
+
+#spring.datasource.url=jdbc:postgresql://postgres:5432/patientdb?createDatabaseIfNotExist=true
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.username=postgres
+#spring.datasource.password=root
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=create
+
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/patientdb?createDatabaseIfNotExist=true
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+#spring.jpa.hibernate.ddl-auto=create
+
+spring.datasource.url=jdbc:h2:mem:patientdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=root
-spring.datasource.password=password
 spring.h2.console.enabled=true
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
